ci/deploy-k8s-aws/deploy/deployment-driver-did-trustbloc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "driver-did-trustbloc"
  namespace: "uni-resolver"
  labels:
    app: "driver-did-trustbloc"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "driver-did-trustbloc"
  template:
    metadata:
      labels:
        app: "driver-did-trustbloc"
    spec:
      containers:
      - name: "driver-did-trustbloc"
        image: trustbloc/driver-did-trustbloc:0.1.3
        imagePullPolicy: Always
        ports:
        - containerPort: 8102
        command:  ['sh', '-c', 'did-method start']
---
apiVersion: v1
kind: Service
metadata:
  name: "driver-did-trustbloc"
  namespace: "uni-resolver"
spec:
  type: NodePort
  selector:
    app: "driver-did-trustbloc"
  ports:
    - protocol: TCP
      port: 8102
      targetPort: 8102
