ci/deploy-k8s-aws/deploy/deployment-uni-resolver-driver-did-echo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "uni-resolver-driver-did-echo"
  namespace: "uni-resolver"
  labels:
    app: "uni-resolver-driver-did-echo"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "uni-resolver-driver-did-echo"
  template:
    metadata:
      labels:
        app: "uni-resolver-driver-did-echo"
    spec:
      containers:
      - name: "uni-resolver-driver-did-echo"
        image: echoprotocol/uni-resolver-driver-did-echo:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: "uni-resolver-driver-did-echo"
  namespace: "uni-resolver"
spec:
  type: NodePort
  selector:
    app: "uni-resolver-driver-did-echo"
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
