ci/deploy-k8s-aws/deploy/deployment-uni-resolver-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uni-resolver-frontend
  namespace: uni-resolver
  labels:
    app: uni-resolver-frontend
    type: driver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: uni-resolver-frontend
  template:
    metadata:
      labels:
        app: uni-resolver-frontend
    spec:
      containers:
      - name: uni-resolver-frontend
        image: universalresolver/uni-resolver-frontend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: uni-resolver-frontend
  namespace: uni-resolver
spec:
  type: NodePort
  selector:
    app: uni-resolver-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
